--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.4.2",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/validator": "^13.7.2"
   }
 }
