--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 BROWSER=
-REACT_APP_CLOUDINARY_API=api.cloudinary.com/v1_1/IDDETUCUENTA/upload
+REACT_APP_CLOUDINARY_API=api.cloudinary.com/v1_1/<your_account_id>/upload
+REACT_APP_CLOUDINARY_UPLOAD_PRESET=<your_upload_preset>
