--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "firebase": "^9.6.10",
+    "luxon": "^2.3.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/luxon": "^2.3.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/validator": "^13.7.2"
   }
